# lancet

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md
SeqLib-1.1.1/: Doxyfile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac  issue_tracking.md
SeqLib-1.1.1/SeqLib/: BFC.h  BWAWrapper.h  BamReader.h  BamRecord.h  BamWriter.h  FastqReader.h  FermiAssembler.h  GenomicRegion.h  GenomicRegionCollection.cpp  ReadFilter.h  RefGenome.h  SeqLibUtils.h  SeqPlot.h  UnalignedSequence.h
SeqLib-1.1.1/benchmark/: Makefile  benchmark.cpp
SeqLib-1.1.1/fermi-lite/: .gitignore  Makefile  bfc.c  bfc.h  bseq.c  bubble.c  example.c  f_ksw.c  f_ksw.h  fml.h  internal.h  misc.c
SeqLib-1.1.1/seq_test/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  seq_test.cpp
SeqLib-1.1.1/src/: .clang-format  BFC.cpp  BWAWrapper.cpp  BamReader.cpp  BamRecord.cpp  BamWriter.cpp  FastqReader.cpp  FermiAssembler.cpp  GenomicRegion.cpp  Makefile.am  Makefile.in  ReadFilter.cpp  RefGenome.cpp  SeqPlot.cpp  ssw.c
SeqLib-1.1.1/src/non_api/: BamStats.cpp  BamStats.h  Fractions.cpp  Fractions.h  Histogram.cpp  Histogram.h  STCoverage.cpp  STCoverage.h
SeqLib-1.1.1/src/seqtools/: Makefile.am  Makefile.in  seqtools.cpp
bamtools-2.3.0/: CMakeLists.txt
bamtools-2.5.2/include/bamtools/api/: bamtools_api_export.h
htslib-1.15.1/: bgzip  config.h  config.mk  config.status  config_vars.h  htscodecs.mk  htsfile  htslib-uninstalled.pc  htslib_static.mk  libhts.3.dylib  libhts.dylib  tabix  version.h
htslib-1.15.1/htscodecs/: MAINTAINERS.md  NEWS
htslib-1.15.1/htscodecs/tests/: arith_dynamic_fuzz.c  fqzcomp_qual_fuzz.c  fqzcomp_qual_test.c  rANS_static4x16pr_fuzz.c  rANS_static_fuzz.c  rANS_static_test.c  tokenise_name3_fuzz.c
htslib-1.15.1/test/: fieldarith  hfile  hts_endian  pileup  pileup_mod  plugins-dlhts  sam  test-bcf-sr  test-bcf-translate  test-parse-reg  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_expr  test_index  test_introspection  test_kfunc  test_kstring  test_mod  test_realn  test_str2int  test_view
src/: ContigLink.cc  ContigLink.hh  CoverageWindow.hh  Edge.cc  Edge.hh  ErrorCorrector.hh  FET.hh  Graph.cc  Graph.hh  Lancet.cc  Lancet.hh  Makefile  Makefile~  Mer.hh  Microassembler.cc  Microassembler.hh  Node.cc  Node.hh  Path.cc  Path.hh  ReadInfo.hh  ReadStart.hh  Ref.cc  Ref.hh  Transcript.hh  Variant.cc  Variant.hh  VariantDB.cc  VariantDB.hh  align.cc  align.hh  sha256.cc  sha256.hh  util.cc  util.hh
